--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "path": "^0.12.7",
+    "express": "^4.17.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,5 +38,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://bisuradoback.herokuapp.com/" 
+  "proxy": "https://bisuradoback.herokuapp.com/"
 }
